manifests/gateway/base/secret.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: secret-pin
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: secret-pin
  template:
    metadata:
      labels:
        app.kubernetes.io/name: secret-pin
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 10002
        runAsGroup: 10002
        fsGroup: 10002
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: pause
          image: registry.k8s.io/pause:3.10.1
          imagePullPolicy: IfNotPresent
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities:
              drop:
                - ALL
          volumeMounts:
            - name: secrets-store-inline
              mountPath: /mnt/secrets-store
              readOnly: true
          resources:
            limits:
              cpu: 2m
              memory: 10Mi
            requests:
              cpu: 1m
              memory: 1Mi
      volumes:
        - name: secrets-store-inline
          csi:
            driver: secrets-store.csi.k8s.io
            readOnly: true
            volumeAttributes:
              secretProviderClass: sakuracloud-secret
