manifests/gateway/base/login-service.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: login
spec:
  parentRefs:
    - name: web-with-auth
  hostnames:
    - login.$k8s-domain.ictsc.net
  rules:
    - backendRefs:
        - name: login
          port: 80
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: login
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: login
  ingress:
    - fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: envoy-gateway-system
            app.kubernetes.io/component: proxy
            gateway.envoyproxy.io/owning-gatewayclass: web-gateway
      toPorts:
        - ports:
            - port: http
---
apiVersion: v1
kind: Service
metadata:
  name: login
spec:
  selector:
    app.kubernetes.io/name: login
  ports:
    - name: http
      port: 80
      targetPort: http
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: login
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: login
  template:
    metadata:
      labels:
        app.kubernetes.io/name: login
    spec:
      securityContext:
        fsGroup: 10001
        runAsGroup: 10001
        runAsNonRoot: true
        runAsUser: 10001
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: nginx
          image: nginx:1.29.3
          ports:
            - name: http
              containerPort: 8080
          resources:
            requests:
              memory: 8Mi
              cpu: 10m
            limits:
              memory: 32Mi
              cpu: 100m
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            readOnlyRootFilesystem: true
          volumeMounts:
            - name: nginx-config
              mountPath: /etc/nginx/conf.d
              readOnly: true
            - name: nginx-cache
              mountPath: /var/cache/nginx
            - name: nginx-run
              mountPath: /var/run
      volumes:
        - name: nginx-config
          configMap:
            name: login-nginx-config
        - name: nginx-cache
          emptyDir: {}
        - name: nginx-run
          emptyDir: {}
