manifests/gateway/base/web-network-policy.yaml
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: gateway-web-proxy
spec:
  description: Allow internet access to web Gateway Proxies in the gateway namespace
  endpointSelector:
    matchLabels:
      k8s:io.kubernetes.pod.namespace: envoy-gateway-system
      app.kubernetes.io/component: proxy
      gateway.envoyproxy.io/owning-gatewayclass: web-gateway
  ingress:
    - fromEntities: [all]
      toPorts:
        - ports:
            - port: "10080"
              protocol: TCP
            - port: "10443"
              protocol: ANY
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: cert-manager-acme-http-solver
spec:
  endpointSelector:
    matchLabels:
      acme.cert-manager.io/http01-solver: "true"
  ingress:
    - fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: envoy-gateway-system
            app.kubernetes.io/component: proxy
            gateway.envoyproxy.io/owning-gatewayclass: web-gateway
      toPorts:
        - ports:
            - port: http
              protocol: TCP
